# transactional-outbox-lib

./: LICENSE  README.md  pyproject.toml
app/: __main__.py
app/repositories/databases/base/: handler.py
app/repositories/databases/sqlalchemy/: handler.py
app/repositories/queue/base/: handler.py
app/repositories/queue/kafka/: handler.py
