[tool.poetry]
name = "transactional-outbox-lib"
version = "0.1.0"
description = ""
authors = ["Sergisson <Abloyxob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.5.5"
mypy = "^1.11.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
